# WickedEngineTIG

./: .clang-format  CMakeLists.txt  CMakePresets.json  WickedEngine.code-workspace  config.ini  vcpkg.json
Content/Documentation/: ScriptingAPI-Documentation.md  WickedEngine-Documentation.md
Editor/: CMakeLists.txt  ufbx.h  xatlas.cpp
Game/: CMakeLists.txt
Game/Source/: main.cpp
Game/Source/CPI/: CMakeLists.txt
Game/Source/CPI/include/: CPI.h  GPUCPI.h
Game/Source/CPI/source/: CPI.cpp  CPIGraph.cpp  CPIGraph.h  CPITask.cpp  CPITask.h  CPI_Impl.cpp  CPI_Impl.h
Game/Source/CPI/source/Tasks/: CPICPUTask.h  CPIGPUTask.h  CPITask.cpp  CPITask.h  CPITaskFactory.h
Game/Source/CPI/tests/: CMakeLists.txt  CPIGraphTests.cpp  CPIShadersTests.cpp  CPITasksTests.cpp
Game/Source/Core/: CMakeLists.txt
Game/Source/Core/include/: Core.h
Game/Source/Core/source/: Core.cpp
Game/Source/GLT/: CMakeLists.txt
Game/Source/GLT/include/: GLT.h
Game/Source/GLT/source/: GLT.cpp  GameLogicThread.cpp  GameLogicThread.h
Game/Source/GPUCPI/: CMakeLists.txt
Game/Source/GPUCPI/include/: GPUCPI.h
Game/Source/GPUCPI/source/: CPIGraph.cpp  CPIGraph.h  CPITask.cpp  CPITask.h  GPUCPI.cpp  GPUCPI_Impl.cpp  GPUCPI_Impl.h
Game/Source/GPUCPI/tests/: CMakeLists.txt  GPUCPIGraphTests.cpp
Samples/Example_ImGui/ImGui/: imgui.h  imgui_demo.cpp
Samples/Example_ImGui_Docking/ImGui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_sdl.cpp
Samples/Template_Linux/: CMakeLists.txt  main.cpp
Samples/Template_Windows/: CMakeLists.txt  Template_Windows.vcxproj  TestCompute.cpp  TestCompute.h  TestUAV.cpp  TestUAV.h  TestUAVCB.cpp  TestUAVCB.h  main.cpp
Samples/Template_Windows/Content/: BulletEmitter.wiscene  Camera.wiscene
Samples/Template_Windows/RawShaders/: TestBulletCS.hlsl
Samples/Template_Windows/TIG/Shaders/: TIGShaderUtils.cpp  TIGShaderUtils.h  TestBulletCS.cpp  TestBulletCS.h  TestDoubleUAV.cpp  TestDoubleUAV.h
Samples/Template_Windows/shaders/: TestBulletCS.hlsl  TestDoubleUAV.hlsl  TestUAVCBCS.hlsl  TestUAVCS.hlsl
Samples/Tests/: test_script.lua
WickedEngine/: CMakeLists.txt  config.ini  offlineshadercompiler.cpp  wiGraphics.h  wiGraphicsDevice.h  wiGraphicsDevice_DX12.h  wiGraphicsDevice_Vulkan.cpp  wiGraphicsDevice_Vulkan.h  wiHelper.cpp  wiHelper.h  wiJobSystem.h  wiLoadingScreen.h  wiLua.h  wiPool.h  wiResourceManager.cpp  wiTerrain.cpp  wickedengine.natvis
WickedEngine/DAG/: CMakeLists.txt
WickedEngine/DAG/include/: CPI.h
WickedEngine/DAG/source/: CPI.cpp  CPI_Impl.cpp  CPI_Impl.h  DAG.cpp  DAG.h
WickedEngine/DAG/source/Tasks/: CPUTask.h  GPUTask.h  Task.cpp  Task.h  TaskFactory.h
WickedEngine/DAG/tests/: CMakeLists.txt  CPIShadersTests.cpp  CPITasksTests.cpp  DAGTests.cpp
WickedEngine/DAG/tests/shaders/: TestUAVCS.hlsl
WickedEngine/Jolt/: Jolt.cmake
WickedEngine/LUA/: CMakeLists.txt
WickedEngine/Utility/: CMakeLists.txt  D3D12MemAlloc.h  portable-file-dialogs.h  vk_mem_alloc.h
WickedEngine/Utility/dxc/: dxcisense.h
cmake/: ModuleHelpers.cmake
